# MetDataPy

./: .coverage  .gitignore  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  FIXES_SUMMARY.md  MANIFEST.in  README.md  READTHEDOCS_CHANGES.md  TO-DO.md  mkdocs.yml  paper.bib  paper.md  postBuild  pyproject.toml  requirements.txt  test_data.csv
.github/: CI_FIX.md  CI_SETUP.md  PULL_REQUEST_TEMPLATE.md  READTHEDOCS_MIGRATION.md  READTHEDOCS_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  draft-pdf.yml  publish.yml
benchmarks/: README.md  benchmark_performance.py
data/: README.md  generate_sample_data.py  mapping_detected.yml
data/processed/: scaler_params.json  test_scaled.parquet  train_scaled.parquet  val_scaled.parquet  weather_clean_hourly.parquet  weather_data_hourly.nc
docs/: cli.md  derive.md  export.md  manifest.md  mapper.md  mlprep.md  quickstart.md  references.md  requirements.txt
examples/: README.md  complete_workflow.py  metdatapy_tutorial.ipynb  netcdf_export_example.py  quickstart_tutorial.ipynb
metdatapy/: __init__.py  cli.py  core.py  derive.py  io.py  mapper.py  mlprep.py  qc.py
metdatapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_core.py  test_derive.py  test_encoding.py  test_integration.py  test_mlprep_comprehensive.py  test_mlprep_simple.py  test_qc.py  test_units.py  test_utils.py
